# shellsense

./: CHANGELOG.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  Makefile  OLD_WAY.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.sh
config/: __init__.py  config_loader.py  example.env  settings.py
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  providers.rst  tools.rst  utils.rst
docs/source/examples/: basic_usage.rst  index.rst
docs/source/guides/: index.rst  quickstart.rst
prompts/: __init__.py  instructions.py
providers/: cloudflare_provider.py  friendly_ai_response.py  openai_provider.py
pyplugin/: main.py
pyplugin/utils/: cloudflare.py  friendly_ai.py  helper.py  instruction.py  instructions.py
requirements/: base.txt  dev.txt
schemas/: cloudflare_input.json  cloudflare_output.json
shellsense/: __init__.py  __main__.py
shellsense/ai/prompts/: __init__.py  instructions.py
shellsense/ai/providers/: base_provider.py  cloudflare_provider.py  friendly_ai_response.py  gemini_provider.py  openai_provider.py
shellsense/config/: __init__.py  example.env  settings.py
shellsense/core/: main.py
shellsense/shell/zsh/: load_plugin.zsh
shellsense/tools/: __init__.py  base.py  base_tool.py  coder.py  manager.py  tool_manager.py
shellsense/tools/coder/: code_generator.py
shellsense/tools/data/: github.py  stock.py  wikipedia_search.py
shellsense/tools/language/: translator.py
shellsense/tools/media/: screenshoter.py
shellsense/tools/shell/: command_execution.py
shellsense/tools/web/: crawler.py  producthunt.py  websearch.py
shellsense/utils/: __init__.py  futuristic_loading.py  loading.py  logging_manager.py  system_context.py
tests/: test_helper.py  test_main.py  test_tool_manager.py
tools/: coder.py  command_execution.py  crawler.py  generic_ai_response.py  producthunt.py  screenshoter.py  stock.py  tool_manager.py  translator.py  websearch.py  wikipedia_search.py
utils/: futuristic_loading.py  system_context.py
zsh/: aliases.zsh  load_plugin.zsh
