[metadata]
name = shellsense
version = attr: shellsense.__version__
description = Intelligent shell plugin that helps users to do tasks within their terminal using AI
long_description = file: README.md
long_description_content_type = text/markdown
author = venopyX
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Shells
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    python-dotenv
    openai
    requests
    bs4
    selenium
    pillow
    googlesearch-python
    beautifulsoup4
    deep_translator
    yfinance
    wikipedia
    requests-html
    lxml[html_clean]

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    isort
    mypy
    flake8

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=shellsense --cov-report=term-missing
